# cff2toml

./: CITATION.cff  LICENSE  README.md  pyproject.toml
src/cff2toml/: __init__.py  cff2toml.py  getters.py  loaders.py  main.py  savers.py  setters.py
src/cff2toml/cli/: app.py  command_metadata_output.py  context_helpers.py
src/cff2toml/cli/about_command/: about_command.py
src/cff2toml/cli/change_command/: change_command.py
src/cff2toml/cli/view_command/: view_command.py
src/cff2toml/models/: basic_model.py  metadata.py
src/cff2toml/models/agents/authors/: cff_author.py  cff_entity_author.py  cff_person_author.py  pyproject_toml_author.py
src/cff2toml/models/agents/authors/synchronizers/: cff_and_pyproject_toml_author_synchronizer.py
src/cff2toml/models/agents/organizations/: cff_entity.py
src/cff2toml/models/agents/people/: cff_person.py  human_name.py
src/cff2toml/models/files/: cff_file.py  metadata_file.py  pyproject_toml_file.py  toml_file.py
src/cff2toml/models/files/synchronizers/: cff_and_pyproject_toml_file_synchronizer.py  cff_and_pyproject_toml_synchronizer.py
src/cff2toml/models/people/: author.py  human_names.py  person.py
tests/: __init__.py  common_fixtures.py  conftest.py  temp_copied_file.py  test_cff2toml.py  test_getters.py  test_loaders.py  test_savers.py  test_setters.py
tests/dummy_files/: dummy_CITATION.cff  dummy_pyproject.toml
tests/models/agents/authors/synchronizers/: test_cff_and_pyproject_toml_author_synchronizer.py
tests/models/files/: test_cff_file.py  test_metadata_file.py  test_pyproject_toml_file.py  test_toml_file.py
tests/models/files/synchronizers/: test_cff_and_pyproject_toml_synchronizer.py
tests/models/people/: test_author.py  test_human_name_parser.py  test_human_names.py
